# config-nest

./: .gitignore  README.md  setup.cfg  setup.py  vignette.ipynb
confignest/: confignest.py
tests/: tests.py
