[metadata]
name = config-nest-djliden
version = 0.0.1
author = Daniel Liden
author_email = dliden@pm.me
description = A small configuration and logging system for machine learning projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/djliden/config-nest
License = MIT

[options]
packages = find:
